add prime vue and themes

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tonreo</title>
+    <title>Torneo</title>
 
     <base href="/" />
 
@@ -25,6 +25,7 @@
       integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
       crossorigin=""
     />
+    <link id="theme-link" rel="stylesheet" href="/themes/lara-light-indigo/theme.css">
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
