--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
+    <meta name="google-site-verification" content="bKkaFN3XOV5s5tCjI1l5RlTifsxSnIYNCX__JziEiNU" />
+
   </head>
 
   <body>
